# DHSCEMI

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-build-and-run.sh  main.py  pyproject.toml  run_benchmark.sh  test_proxy.py
benchmarks/: analyze_logs.py  benchmark.py  benchmark_config.json  benchmark_config_cluster_test_1.json  benchmark_config_cluster_test_2.json  benchmark_configv2.json  benchmark_configv2_inverted.json  docker-compose.yml  docker_benchmark.py  kill_benchmarks.sh  night_logs  pyproject.toml  requirements.txt  run_benchmark.sh  run_benchmark_detached.sh
benchmarks/benchmark_results/: benchmark_results_20250728_231447.csv  benchmark_results_20250728_231447.json
benchmarks/docker/: Dockerfile.cpu  Dockerfile.cuda
benchmarks/logs/cluster/: benchmark_logs
benchmarks/logs/v1/: log
benchmarks/logs/v2/: night_logs_4
benchmarks/scripts/: analyze_logs.py  analyze_logs_plotly.py  analyze_logs_scatter.py  analyze_logs_scatterv2.py  benchmark.py  benchmarkv2.py  enable_mps.sh  parse_log.py  setup.sh  test_setup.py  visualize.py
benchmarks/visualizations/: benchmark_results.json  benchmark_summary_plotly.txt
benchmarks/visualizations/scatter/1/: benchmark_summary_scatter.txt
benchmarks/visualizations/scatter/2/: benchmark_summary_scatter.txt
benchmarks/visualizations/scatter/4/: benchmark_summary_scatter.txt
benchmarks/visualizations/scatter/4_2/: benchmark_data_line.csv  benchmark_data_line.json  raw_stats_result_data.json
nvidia-dind/: Dockerfile
scripts/: disable_mps.sh  download_models.py  enable_mps.sh  setup.sh  test_setup.py
(+17 files in other folders)
